before impl comment delete func
